<resources>
    <string name="app_name">Tinderr</string>
    <string name="or">OR</string>
    <string name="ok">Okay</string>
    <string name="back" translatable="false">Back Button</string>
    <string name="continue_button" translatable="false">Continue</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>

    <!-- Splash -->
    <string name="splash_title">tinder</string>

    <!-- Auth -->
    <string name="auth_policy" translatable="false">By clicking "Log in", you agree with out <a href="https://www.google.com/">Terms</a>.\nLearn how we process your data in our <a href="https://www.google.com/">Privacy Policy and Cookies Policy.</a></string>
    <string name="auth_button_number" translatable="false">log in with phone number</string>
    <string name="auth_button_google" translatable="false">log in with google</string>
    <string name="auth_button_facebook">log in with facebook</string>
    <string name="auth_trouble" translatable="false">Trouble logging in?</string>

    <!-- Auth Number -->
    <string name="auth_number_title" translatable="false">My number is</string>
    <string name="auth_number_placeholder">Phone Number</string>
    <string name="auth_number_hint">When you tap "Continue", Tinder will send a text with verification code. Message and data rates may apply.\nThe verified phone number can be used to log in. <a href="">Learn what happens when your number changes.</a></string>
    <string name="auth_number_ext">IN +91</string>

    <!-- Search Ext Number -->
    <string name="ext_search">Search</string>

    <!-- Account Recovery -->
    <string name="account_recovery_title">Account recovery</string>
    <string name="account_recovery_info">Changed your phone number or lost access to your Facebook account? We can help you login with your email.</string>
    <string name="account_recovery_button">log in with email</string>

    <!-- Auth Email -->
    <string name="auth_email_title">Log in by email</string>
    <string name="auth_email_hint">Your email is</string>
    <string name="auth_email_note">We\'ll email you a link that will instantly log you in</string>
    <string name="auth_email_button">send email</string>

    <!-- Check Email -->
    <string name="check_email_title">Check your email!</string>
    <string name="check_email_note">If we found an account with <b>vijusawant81@gmail.com</b>, an email has been sent. Please check you email in a moment.</string>
    <string name="check_email_not_received">Didn\'t receive a link?</string>
    <string name="check_email_change_email">use a different email</string>
    <string name="check_email_use_phone">use your phone number</string>

    <!-- Check Email -->
    <string name="otp_title">My code is</string>
    <string name="otp_number">9699895355</string>
    <string name="otp_resend">Resend</string>

    <!-- Access Location -->
    <string name="location_title">Enable location</string>
    <string name="location_desc">You\'ll need to enable your location in order to user Tinderr</string>
    <string name="location_button">allow location</string>
    <string name="location_more">Tell me more</string>
    <string name="location_title_more">Meet people nearby</string>
    <string name="location_desc_more">Your location will be used to show potential matches near you</string>

    <!-- Profile -->
    <string name="profile_image">Profile Photo</string>
    <string name="profile_name">Viju, 21</string>
    <string name="profile_settings">settings</string>
    <string name="profile_media">add media</string>
    <string name="profile_edit">edit info</string>
    <string name="profile_tip">Photo tip: try to keep your tongue in the mouth</string>
    <string name="profile_carousel">Profile Carousel</string>

    <!-- Profile -->
    <string name="media_title">Create new</string>
    <string name="media_subtitle">Select a content type</string>
    <string name="media_gallery">Gallery</string>
    <string name="media_upload">Upload from</string>
    <string name="media_prompt">Prompt</string>
    <string name="media_create">Create a new</string>
    <string name="media_camera">Camera</string>
    <string name="media_capture">Capture from</string>

    <!-- Chats -->
    <string name="chats_message">Messages</string>
    <string name="chats_feed">Feed</string>
    <string name="chats_search">Search 0 matches</string>
    <string name="chats_new_matches">New matches</string>
    <string name="chats_feed_empty_title">Check back later</string>
    <string name="chats_feed_empty_subtitle">We couldn\'t find any social activity for matches. Try again later</string>

    <!-- Like -->
    <string name="like_my_likes_tab">0 likes</string>
    <string name="like_sent_tab">Like Send</string>
    <string name="like_top_picks_tab">Top Picks</string>
    <string name="like_my_likes_empty_title">See people who liked you with Tinder Gold</string>
    <string name="like_my_likes_button">see who likes you</string>

    <!-- Swipe -->
    <string name="swipe_btn_rewind">Rewind</string>
    <string name="swipe_btn_dislike">Dislike</string>
    <string name="swipe_btn_super_like">Like</string>
    <string name="swipe_btn_boost">Boost</string>
    <string name="swipe_image">Boost</string>
    <string name="swipe_like">Like</string>
    <string name="swipe_nope">Nope</string>
    <string name="swipe_super">super <br /> like</string>

    <!-- Your Email -->
    <string name="your_email_title">What\'s your email?</string>
    <string name="your_email_desc">Don\'t lose access to your account, verify your email.</string>
    <string name="your_email_placeholder">Enter email</string>
    <string name="your_email_google">Verify instantly by connecting your google account</string>

    <!-- First Name -->
    <string name="first_name_title">My first <br /> name is</string>
    <string name="first_name_placeholder">First name</string>
    <string name="first_name_desc">This is how it will appear in Tinderr, and you will not able to change it</string>

    <!-- My Birthday -->
    <string name="birthday_title">My <br /> birthday is</string>
    <string name="birthday_placeholder">DD/MM/YY</string>
    <string name="birthday_desc">Your age will be public.</string>

    <!-- Select Gender -->
    <string name="select_gender_title">I am a</string>
    <string name="select_gender_woman">Woman</string>
    <string name="select_gender_man">Man</string>
    <string name="select_gender_other">Other</string>
    <string name="select_gender_checkbox">Show my gender on my profile</string>

    <!-- Show Me -->
    <string name="show_me_title">Show me</string>
    <string name="show_me_everyone">Everyone</string>

    <!-- My University Name -->
    <string name="my_university_title">My <br /> university is</string>
    <string name="my_university_placeholder">University name</string>
    <string name="my_university_desc">This is how it will appear in Tinderr, and you will not able to change it</string>

    <!-- Sexual Orientation -->
    <string name="s_orientation_title">My sexual <br /> orientation is</string>
    <string name="s_orientation_note">Select up to 3</string>
    <string name="s_orientation_checkbox">Show my orientation on my profile</string>

    <!-- Passions -->
    <string name="passions_title">Passions</string>
    <string name="passions_desc">Let everyone know what you\'re passionate about, by adding it to your profile</string>
    <string name="passions_button">Continue (%1$d/5)</string>

    <!-- Upload Image -->
    <string name="upload_image_title">Add photos</string>
    <string name="upload_image_desc">Add at least 2 photo to continue</string>

    <!-- Access Dialog -->
    <string name="access_title">Photo Access</string>
    <string name="access_desc">To upload the photos from your device, Tinder needs to access your photos. Please tap "Allow" in the next step.</string>

    <!-- Camera Preview -->
    <string name="camera_capture_button">Capture</string>
    <string name="camera_change_button">Change</string>
    <string name="camera_close_button">Close</string>
    <string name="camera_flash_button">Flash</string>

</resources>
