<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_linear_gradient"
    android:padding="30dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/splash_title"
            android:src="@drawable/tinder_white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chalet"
            android:text="@string/splash_title"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/policyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/auth_policy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        style="@style/Theme.RoundedButton"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_search"
        android:text="@string/auth_button_google"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton3"
        style="@style/Theme.RoundedButton"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/auth_button_facebook"
        app:layout_constraintBottom_toTopOf="@+id/numberButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/numberButton"
        style="@style/Theme.RoundedButton"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/ic_speech_bubble"
        android:text="@string/auth_button_number"
        app:layout_constraintBottom_toTopOf="@+id/recoveryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recoveryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_trouble"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>