<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <include
        layout="@layout/back_button"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/auth_number_title"
        android:textColor="#555"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/numberDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="false"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/icon_arrow_down"
        android:drawablePadding="10dp"
        android:focusable="false"
        android:hint="@string/auth_number_ext"
        android:inputType="number"
        android:paddingStart="5dp"
        android:text="@string/auth_number_ext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlSymmetry"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="false"
        android:backgroundTint="@color/pink_700"
        android:hint="@string/auth_number_placeholder"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="5dp"
        android:textCursorDrawable="@drawable/icon_cursor"
        app:layout_constraintBottom_toBottomOf="@+id/numberDropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberDropdown"
        tools:ignore="RtlSymmetry"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/auth_number_hint"
        android:textColorLink="#333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberDropdown" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        style="@style/Theme.RoundedButtonGradient"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>